alterando texto alternativo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sobre mim</h1>
-    <img src="assets/images/profile_devgabrielnascimento 1.png" alt="praia">
+    <img src="assets/images/profile_devgabrielnascimento 1.png" alt="foto_perfil">
     <p>Olá! Sou um Desenvolvedor Web Fullstack Java atualmente desenvolvendo minhas habilidades no bootcamp da Generation Brasil!
     <hr>
     <div>
