--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mim</title>
+    <title>Fale comigo</title>
 </head>
 <body>
     <h1>Entre em contato comigo agora:</h1>
