organizando pastas e adicionando favicon

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale comigo</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="shortcut icon" href="../assets/images/profile_devgabrielnascimento 1.png" type="image/x-icon">
 </head>
 <body>
     <div id="topoformulario"> <h1 id="inicio">Entre em contato comigo agora:</h1>
