--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           />
         </svg>
         <ul id="navbar">
-          <li id="stared_item"><a href="default.asp">Sobre mim</a></li>
+          <li id="stared_item"><a href="#">Sobre mim</a></li>
           <li id="item"><a href="pages/formulario.html">Fale comigo</a></li>
         </ul>
       </header>
