--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -13,7 +13,7 @@
         <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z" fill="black"/>
         </svg><ul id="navbar">
         <li id="item"><a href="../index.html">Sobre mim</a></li>
-        <li id="stared_item"><a href="">Fale comigo</a></li>
+        <li id="stared_item"><a href="#">Fale comigo</a></li>
       </ul></header>
     <div id="topoformulario"> <h1 >Entre em contato comigo agora:</h1>
         </div>
