add nova funcionalidade, baixar CV na página principal

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <ul id="navbar">
           <li id="stared_item"><a href="#">Sobre mim</a></li>
           <li id="item"><a href="pages/formulario.html">Fale comigo</a></li>
+          <li id="cv"><a href="CV_GABRIEL_NASCIMENTO_DA_SILVA_DESENVOLVEDOR.pdf" download>Baixar CV<svg width="76" height="76" viewBox="0 0 76 76" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.40316C0 1.07593 1.07593 0 2.40316 0H73.5968C74.9241 0 76 1.07593 76 2.40316V73.5968C76 74.9241 74.9241 76 73.5968 76H2.40316C1.07593 76 0 74.9241 0 73.5968V2.40316ZM33.0111 37.0526V8.97228H42.9234V37.0526L52.8995 27.0765L59.9085 34.0855L41.4717 52.5222L37.9672 56.0268L34.4627 52.5222L16.026 34.0855L23.035 27.0765L33.0111 37.0526ZM17.9446 71.6176H57.7918V61.7054H17.9446V71.6176Z" fill="#598CD9"/></a>
+            </svg></li>
         </ul>
       </header>
       <h1>Sobre mim</h1>
@@ -85,7 +88,7 @@
           </tr>
         </table>
       </div>
-
+      
       <svg
         id="contato_celular"
         width="70"
