corrigindo erro no favicon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="assets/images/profile_devgabrielnascimento
-    1.png"image/x-icon">
+    1.png"type="image/x-icon">
   </head>
   <body>
     <div id="main">
