adicionando mais responsividade

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.40316C0 1.07593 1.07593 0 2.40316 0H73.5968C74.9241 0 76 1.07593 76 2.40316V73.5968C76 74.9241 74.9241 76 73.5968 76H2.40316C1.07593 76 0 74.9241 0 73.5968V2.40316ZM33.0111 37.0526V8.97228H42.9234V37.0526L52.8995 27.0765L59.9085 34.0855L41.4717 52.5222L37.9672 56.0268L34.4627 52.5222L16.026 34.0855L23.035 27.0765L33.0111 37.0526ZM17.9446 71.6176H57.7918V61.7054H17.9446V71.6176Z" fill="#598CD9"/></a>
             </svg></li>
         </ul>
+        <div id="dropdown_hamburguer">
+          <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path class="stroke1" fill-rule="evenodd" clip-rule="evenodd" d="M19 3.5H0V0.5H19V3.5ZM19" fill="black"/>
+            <path class="stroke2" fill-rule="evenodd" clip-rule="evenodd" d="M19 12.5H0V9.5H19V12.5ZM0.5Z" fill="black"/>
+            <path class="stroke3"fill-rule="evenodd" clip-rule="evenodd" d="M19 20.5H19V17.5H0V20.5Z" fill="black"/>
+            </svg>
+          <div id="dropdown-content">
+          <a href="index.html">Sobre mim</a>
+          <a href="pages/formulario.html">Link 2</a>
+          </div>
+        </div>
       </header>
       <h1>Sobre mim</h1>
       <img
@@ -87,7 +98,11 @@
           </tr>
         </table>
       </div>
-      
+      <hr>
+      <div>
+        <h2>Minhas certificações</h2>
+        <img class="certifications" src="assets/images/aws_certification_cloud_practitioner.png" width="150" height="150" alt="">
+      </div>
       <svg
         id="contato_celular"
         width="70"
