add funcionalidade com JS (em andamento...)

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="assets/images/profile_devgabrielnascimento 1.png"type="image/x-icon">
+    
   </head>
-  <body>
+  <body id="body_home">
     <div id="main">
       <header>
-        <svg
+        <svg id="logo"
           width="144"
           height="144"
           viewBox="0 0 144 144"
@@ -28,11 +29,13 @@
             clip-rule="evenodd"
             d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z"
             fill="black"
-          />
-        </svg>
-        <ul id="navbar">
+            />
+          </svg>
+          <ul id="navbar">
+          <img id="theme"src="assets/images/moon_icon.svg" alt="">
           <li id="stared_item"><a href="#">Sobre mim</a></li>
           <li id="item"><a href="pages/formulario.html">Fale comigo</a></li>
+          
           <li id="cv"><a href="CV_GABRIEL_NASCIMENTO_DA_SILVA_DESENVOLVEDOR.pdf" download>Baixar CV<svg width="76" height="76" viewBox="0 0 76 76" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.40316C0 1.07593 1.07593 0 2.40316 0H73.5968C74.9241 0 76 1.07593 76 2.40316V73.5968C76 74.9241 74.9241 76 73.5968 76H2.40316C1.07593 76 0 74.9241 0 73.5968V2.40316ZM33.0111 37.0526V8.97228H42.9234V37.0526L52.8995 27.0765L59.9085 34.0855L41.4717 52.5222L37.9672 56.0268L34.4627 52.5222L16.026 34.0855L23.035 27.0765L33.0111 37.0526ZM17.9446 71.6176H57.7918V61.7054H17.9446V71.6176Z" fill="#598CD9"/></a>
             </svg></li>
@@ -197,5 +200,6 @@
         </div>
       </footer>
     </div>
+    <script src="assets/js/switchtheme.js"></script>
   </body>
 </html>
