--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -6,6 +6,7 @@
     <title>Fale comigo</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="shortcut icon" href="../assets/images/profile_devgabrielnascimento 1.png" type="image/x-icon">
+    <script src="../assets/js/switchtheme.js"></script>
 </head>
 <body id="inicio">
     <div id="main">
@@ -36,7 +37,7 @@
             <input type="email" id="email" placeholder="Digite o seu e-mail. Ex.: teste@teste.com">
             <label for="assunto">Assunto: </label>
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button>Enviar</button>
+            <button id="button_forms">Enviar</button>
         </form>
     </div>
     
