--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
   <body id="body_home">
     <div id="main">
       <header>
-        <svg id="logo"
-          width="144"
-          height="144"
-          viewBox="0 0 144 144"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z"
-            fill="black"
-            />
-          </svg>
+        <a href="index.html">
+          <svg id="logo"
+            width="144"
+            height="144"
+            viewBox="0 0 144 144"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z"
+              fill="black"
+              />
+            </svg>
+        </a>
           <ul id="navbar">
           <img id="theme" src="assets/images/moon_icon.svg" alt="moon icon">
           <li id="stared_item"><a href="#">Sobre mim</a></li>
@@ -40,7 +42,7 @@
             </svg></li>
         </ul>
         <div id="dropdown_hamburguer">
-          <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg id="icon_menu_hamburguer"width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="stroke1" fill-rule="evenodd" clip-rule="evenodd" d="M19 3.5H0V0.5H19V3.5ZM19" fill="black"/>
             <path class="stroke2" fill-rule="evenodd" clip-rule="evenodd" d="M19 12.5H0V9.5H19V12.5ZM0.5Z" fill="black"/>
             <path class="stroke3"fill-rule="evenodd" clip-rule="evenodd" d="M19 20.5H19V17.5H0V20.5Z" fill="black"/>
@@ -57,7 +59,7 @@
         alt="foto_perfil"
       />
       <p>
-        Olá! Sou um Desenvolvedor Web Fullstack Java atualmente desenvolvendo
+        Olá! Meu nome é Gabriel Nascimento. Sou um Desenvolvedor Web Fullstack Java atualmente desenvolvendo
         minhas habilidades no bootcamp da Generation Brasil!
       </p>
       <hr />
