--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -10,9 +10,11 @@
 </head>
 <body id="inicio">
     <div id="main">
-    <header><svg width="144" height="144" viewBox="0 0 144 144" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z" fill="black"/>
-        </svg><ul id="navbar">
+    <header><a href="../index.html">
+      <svg id="logo" width="144" height="144" viewBox="0 0 144 144" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.55336C0 2.03861 2.03861 0 4.55336 0H139.447C141.961 0 144 2.03861 144 4.55336V139.447C144 141.961 141.961 144 139.447 144H4.55336C2.03861 144 0 141.961 0 139.447V4.55336ZM27.1464 53.4507L64.4033 16.1938L73.6715 25.462L41.0488 58.0848L73.6715 90.7075L64.4033 99.9758L27.1464 62.7189L22.5123 58.0848L27.1464 53.4507ZM80.7638 40.7923L118.021 78.0492L122.655 82.6833L118.021 87.3174L80.7638 124.574L71.4956 115.306L104.118 82.6833L71.4956 50.0605L80.7638 40.7923Z" fill="black"/>
+          </svg>
+    </a><ul id="navbar">
         <li id="item"><a href="../index.html">Sobre mim</a></li>
         <li id="stared_item"><a href="#">Fale comigo</a></li>
       </ul>
@@ -37,7 +39,7 @@
             <input type="email" id="email" placeholder="Digite o seu e-mail. Ex.: teste@teste.com">
             <label for="assunto">Assunto: </label>
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button id="button_forms">Enviar</button>
+            <button id="button_">Enviar</button>
         </form>
     </div>
     <h2>Endereço: </h2>
@@ -73,5 +75,6 @@
             <div id="div_direitos_reservados"><p>© 2024 Generation: You Employed, Inc.</p></div>
           </footer></div>
     </div>
+    <script src="assets/js/switchtheme.js"></script>
 </body>
 </html>
