corrigindo problema no buttons

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -39,7 +39,7 @@
             <input type="email" id="email" placeholder="Digite o seu e-mail. Ex.: teste@teste.com">
             <label for="assunto">Assunto: </label>
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button id="button_">Enviar</button>
+            <button id="button_forms">Enviar</button>
         </form>
     </div>
     <h2>Endereço: </h2>
